--- a/index.html
+++ b/index.html
@@ -1,12 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+    <!-- 
+    Header
+
+    4 section;
+
+    section 1: h1, p, h3, p, two links
+    section 2: img, h3, p
+    section 3: h3, img, h3, p
+    section 4: h3, img
+
+    Footer
+-->
+
+
+    <section id="intro">
+        <h1>Build amazing things</h1>
+        <p>we're npm, inc., the company behind Node package manager, the npm Registry, and npm CLI. We offer those to
+            the community for free, but our day job is building and selling useful tools for developers like you.</p>
+        <h3>Take your javaScript development up a notch</h3>
+        <p>Get startec today for free, or step up to npm Pro to enjoy a premium JavaScript development experience, with
+            features like private packages.</p>
+        <input type="button" value="Sign up for free">
+        <input type="button" value="Learn about Pro">
+    </section>
+
+
+    <section id="about">
+        <img src="./assets/bubble.png" alt="Bubble Image">
+        <h3>Bring the best of open source to you, your team, and your company</h3>
+        <p>Relied upon by more tahn 11 million developers worldwide, npm is committed to making JavaScript development
+            elegant, productive, and safe. The free npm Registry has become teh center of JavaScript code sharing, and
+            with more than one million packages, the largest software registry in the world. Our other tools and
+            services take the Reistry, and the work you do around it, to the next level.</p>
+    </section>
+
+
+    <section id="open-source">
+        <h3>We ❤ open source</h3>
+        <p>At npm, inc., we're proud to didicate teams of full-time employees to operating the npm Registry, enhancing
+            th CLI, improving JavaScript security, and other projects that support and nurture an vibrant open source
+            community.</p>
+    </section>
+
+
+    <section id="Companies">
+        <h3>Greatfully serving everyone from solo devs to the Fortune 500</h3>
+        <img src="./assets/company.png" alt="Image Company">
+    </section>
+
+
+    <footer>
+        <img src="./assets/" alt="">
+    </footer>
+
 </body>
+
 </html>
