Second HTML Commit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
 
     <!-- 
+    Navigation
+      ul-2, ul-4
+
     Header
+    logo, text-box, button, button
 
     4 section;
 
@@ -23,6 +27,35 @@
     Footer
 -->
 
+    <nav>
+        <ul>
+            <li><img src="./assets/black-heart.png" alt="black heart"></li>
+            <li><a href="#">National Poo Museum</a></li>
+            <li>
+                <ul>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Documentation</a></li>
+                    <li><a href="#">Community</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+
+    <header>
+        <img src="./assets/logo.png" alt="npm logo">
+        <img src="./assets/Search.png" alt="Search">
+        <form action="#">
+            <input type="text" placeholder="Search Packages">
+            <input type="button" placeholder="Search">
+            <ul>
+                <li><a href="#"></a>Sign Up</li>
+                <li><a href="#"></a>Sign In</li>
+            </ul>
+
+        </form>
+
+    </header>
 
     <section id="intro">
         <h1>Build amazing things</h1>
@@ -31,8 +64,8 @@
         <h3>Take your javaScript development up a notch</h3>
         <p>Get startec today for free, or step up to npm Pro to enjoy a premium JavaScript development experience, with
             features like private packages.</p>
-        <input type="button" value="Sign up for free">
-        <input type="button" value="Learn about Pro">
+        <a href="">Sign up for free</a>
+        <a href="">Learn about Pro</a>
     </section>
 
 
@@ -62,6 +95,37 @@
 
     <footer>
         <img src="./assets/" alt="">
+        <div>
+
+            <div>
+                <h2>Support</h2>
+                <ul>
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Community</a></li>
+                    <li><a href="#">Advisors</a></li>
+                    <li><a href="#">Status</a></li>
+                    <li><a href="#">Contact npm</a></li>
+                </ul>
+            </div>
+            <div>
+                <h2>Company</h2>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Press</a></li>
+                </ul>
+            </div>
+            <div>
+                <h2>Terms & Policies</h2>
+                <ul>
+                    <li><a href="#">Policies</a></li>
+                    <li><a href="#">Terms of Use</a></li>
+                    <li><a href="#">Code of Coduct</a></li>
+                    <li><a href="#">Privacy</a></li>
+                </ul>
+            </div>
+
+        </div>
     </footer>
 
 </body>
